Configuring Api Gateway

--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=hr-payroll
 server.port=8101
 
+#Registering on Eureka Server
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=30000
-#ribbon.ConnectTimeout=10000
-#ribbon.ReadTimeout=20000
+eureka.instance.hostname=localhost
