--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 
 spring.application.name=hr-worker
-server.port=${PORT:0}
+server.port=8001
 
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-
+#Registering on Eureka Server
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
+eureka.instance.hostname=localhost
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
