--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 server.port=8888
 spring.application.name=hr-config-server
 
+#Branch que esta como default no github(por padrao quando se cria um repo é a branch main)
 spring.cloud.config.server.git.default-label=main
+#Url do repositorio remoto que ira guardar todos arquivos de config .properties ou .yml
 spring.cloud.config.server.git.uri=https://github.com/brunoquei2105/microservices-dev-config
+
+#Como geralmente o repositorio de confiuracao fica privativo voce tem q setar o username e o password para poder ter acesso
+#as configuracoes, para isso voce deve criar variaveis de ambiente no ambiente onde seu projeto esta, seja docker, heroku...
+#como aqui estou nesse projeto local, eu criei duas variaveis de ambientes no meu projeto (edit configurations).
+
+#spring.cloud.config.server.git.username=${GITHUB_USER}
+#spring.cloud.config.server.git.password=${GITHUB_PASSWORD}
