--- a/hr-api-gateway/src/main/resources/application.yaml
+++ b/hr-api-gateway/src/main/resources/application.yaml
@@ -19,6 +19,10 @@ spring:
           uri: lb://hr-worker
           predicates:
             - Path=/workers/**
+        - id: hr-user
+          uri: lb://hr-user
+          predicates:
+            - Path=/users/**
 #Actuator configuration
 management:
   endpoint:
