--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,14 +1,22 @@
-
 spring.application.name=hr-worker
 server.port=8001
 
-#Registering on Eureka Server
+#Aqui estamos informando o endereço do servidor do Eureka, seu host bem como informando que o microservço
+#hr-worker é um cliente eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
-# Database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/hr-worker-db
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# apontamos para o JPA e Hibernate qual é o Dialeto do banco de dados
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
