--- a/hr-worker/src/main/resources/bootstrap.properties
+++ b/hr-worker/src/main/resources/bootstrap.properties
@@ -1,8 +1,9 @@
 spring.application.name=hr-worker
 #localizacao do servidor de configuracao
 spring.cloud.config.uri=http://localhost:8888
+spring.config.import=configserver
 
 #Com essa propriedade voce pode ativar diferentes profiles(dev, test, prod) e a depender de qual, o config server vai buscar
 #a configuracao no repo remoto do github.
-spring.profiles.active=test
+#spring.profiles.active=test
 management.endpoints.web.exposure.include=*
