Implementing hr-oauth

--- a/hr-api-gateway/src/main/resources/application.yaml
+++ b/hr-api-gateway/src/main/resources/application.yaml
@@ -23,6 +23,11 @@ spring:
           uri: lb://hr-user
           predicates:
             - Path=/users/**
+        - id: hr-oauth
+          uri: lb://hr-oauth
+          predicates:
+            - Path=/oauth/**
+
 #Actuator configuration
 management:
   endpoint:
