--- a/hr-oauth/src/main/resources/application.properties
+++ b/hr-oauth/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=hr-oauth
+server.port=9001
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
